- Added "add order" function with swagger docs. - Added migration table for order - Added custom validation to check the product & coupon availability
